@@ -187,12 +187,16 @@
 
 
     <h1>Convert-SecureStringToString</h1>
-    <div>Converts a secure string into a plaintext string.</div>
+    <div>Converts a secure string into a plain text string.</div>
 
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Convert-SecureStringToString [-SecureString] &lt;SecureString&gt; [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>Sometimes you just need to convert a secure string into a plain text string.  This function does it for you.  Yay!  Once you do, however, the cat is out of the bag and your password will be <em>all over memory</em> and, perhaps, the file system.</p>
+
+    </div>
     
     
 
@@ -220,10 +224,15 @@
         
     
         
-    
+            <h2>Return Values</h2>
+        <p><a href="http://msdn.microsoft.com/en-us/library/system.string.aspx">System.String</a>. </p>
+
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Convert-SecureStringToString -SecureString $mySuperSecretPasswordIAmAboutToExposeToEveryone</code></pre>
+            <p><p>Returns the plain text/decrypted value of the secure string.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
